feat: add file logging mechanism for debugging, release v1.1.0

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ HCP_CLIENT_SECRET=
 # Logging configuration
 # HOOK_VAULT_RADAR_LOGGING_LEVEL=info
 # HOOK_VAULT_RADAR_LOGGING_FORMAT=json
+# HOOK_VAULT_RADAR_LOGGING_LOG_FILE=~/.agent-hooks/vault-radar/logs/hook.log  # Enable file logging for debugging hooks
 
 # Vault Radar configuration
 # HOOK_VAULT_RADAR_VAULT_RADAR_COMMAND=vault-radar
